--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
     - choco install python3
     script:
     - python -c "print('Hello World!')"
+    - ls C:\Python37
     cache:
       directories:
       - C:\Python37
