--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,4 @@ matrix:
   - name: "Windows installer"
     os: windows
     language: shell
-    before_install:
-    - choco install pip
-    script:
-    - pip --help
+    script: echo hello
