--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
     - choco install msys2
     - "ls C:/tools/msys64"
     - "dir C:/tools/msys64"
+    script: kill 0
     cache:
       directories:
       - C:\tools
